[package]
name = "tamer"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.2.2"
serde_json = "1.0.107"
serde_derive = "1.0.188"
serde = "1.0.188"
tokio = {version = "1.34.0", features = ["full"] }
tempfile = "3.8.0"
chrono = "0.4.30"
clap = {version = "4.4.3", features = ["derive"] }
regex = "1.9.5"

[[bench]]
name = "bench"
harness = false